Fixed centering issue in alert elements. Updated missing jsdoc attributes. Fixed issue in drawer where open event would fire incorrectly. Updated scroll list to reevaluate arrow visiblity on window resize. Fixed multiple bugs in table element.

--- a/src/Components/Alert/kiwi-alert.scss
+++ b/src/Components/Alert/kiwi-alert.scss
@@ -17,6 +17,7 @@
 	border-left: var(--kiwi-alert-border, 0.5rem solid transparent);
 	border-color: var(--border-color);
 	background: var(--background-color);
+	align-items: center;
 	::slotted(*) {
 		color: var(--body-color) !important;
 	}
@@ -24,6 +25,7 @@
 		color: var(--header-color) !important;
 	}
 	#close-icon {
+		align-self: flex-start;
 		stroke: var(--stroke-color);
 		&:focus,
 		&:active,
